# MiXBot

./: Cargo.toml  default.nix
docs/: CHANGELOG.md  README.md
src/: main.rs
src/commands/: mod.rs  movement.rs
src/discord/: commands.rs  mod.rs
src/minecraft/: mod.rs
src/minecraft/commands/: mod.rs  movement.rs
src/minecraft/tasks/: idle.rs  mod.rs
src/tasks/: idle.rs  mod.rs
