[package]
authors = ["SchweGELBin <schwegelbin@gmail.com>"]
edition = "2024"
name = "mixbot"
version = "0.3.1"


[dependencies]
anyhow = "^1.0"
azalea = { version = "^0.15", git = "https://github.com/azalea-rs/azalea"}
parking_lot = "^0.12"
poise = "^0.6"
tokio = "^1.50"
tracing-subscriber = "^0.3"
